--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,11 +117,11 @@ h3 {
 
 h4 {
 	padding: 10px 0 10px 0;
-	text-align: center;
-	font-family: "Vollkorn", serif;
-	font-style: italic;
+	text-align: left;
+	font-family: "Montserrat", sans-serif;
 	font-size: 20px;
-	color: #777777;
+	font-weight: bold;
+	color: #222222;
 }
 
 main {
@@ -135,6 +135,7 @@ main .content {
 }
 
 main h2 {
+	max-width: 800px;
 	padding: 40px 0 20px 0;
 	text-align: center;
 	font-family: "Montserrat", sans-serif;
@@ -143,12 +144,48 @@ main h2 {
 	color: #222222;
 }
 
-main p {
+main h4 {
 	max-width: 800px;
+	margin: 0 auto;
+	padding: 10px 0 10px 0;
+	text-align: left;
+	font-family: "Montserrat", sans-serif;
+	font-size: 20px;
+	font-weight: bold;
+	color: #222222;
+}
+
+
+main p {
 	padding: 10px 0;
 	text-align: left;
 	font-family: "Montserrat", serif;
 	font-size: 20px;
+}
+
+main .links {
+	max-width: 800px;
+	margin: 0 auto;
+	display: flex;
+	justify-content: space-between;
+}
+
+main .links a {
+	padding: 10px 0;
+	text-align: left;
+	font-family: "Montserrat", serif;
+	text-decoration: none;
+	color: #0000ff;
+	font-size: 15px;
+}
+
+main .links p {
+	font-size: 15px;
+}
+
+main .links a:hover {
+	outline: #0000ff 1px dotted;
+	outline-offset: 2px;
 }
 
 #blog {
